<resources>
    <string name="app_name">Drum Simulator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="enter_id_hint">Enter email</string>
    <string name="enter_password_hint">Enter password</string>
    <string name="signin_text">Sign In</string>
    <string name="LOGIN_FILE"> edu.uw.tacoma.mmuppa.webservicelab.LOGIN_FILE</string>
    <string name="LOGIN_PREFS">edu.uw.tacoma.mmuppa.webservicelab.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="USERNAME">username</string>
    <string name="facebook_app_id">512888188911964</string>
    <string name="register_button">Register</string>
    <string name="enter_username_hint">Enter username (not required for signin)</string>
    <string name="logout_string">Log Out</string>

    <string name="play_drums_button_text">Play</string>
    <string name="view_users_button_text">View Users</string>
    <string name="cancel">Cancel</string>
    <string name="save_confirm">Save</string>
    <string name="recording_name_hint">Recording name</string>
    <string name="recording_share_button">Share</string>
    <string name="recording_shared">Shared</string>
    <string name="recording_private">Private</string>
    <string name="play_drums">Play Drums</string>
    <string name="cusomize_drums">Customize</string>
    <string name="customize_drumset">Customize</string>
    <string name="view_recordings">My Recordings</string>
    <string name="save_changes">Save Changes</string>
    <string name="play_recording">Play Recording</string>
    <string name="explore_community">Community Creations</string>
    <string name="help_button">Documentation</string>
    <string name="delete_recording">Delete</string>
    <string name="help">How to play drums:\n
    In the main menu press the "PLAY" button and then you can start playing the drums.\n
    How to record jam session:\n
    In the "PLAY" section there is a button that says "REC" which records everything that you play from then on.\n
    How to Customize Drum set:\n
    There are two ways to customize your drum set. First way is on the main menu you can go to "CUSTOMIZE" and it will let you move, add, or delete drums. Second way is on the "PLAY" section you can press the "CUSTOMIZE" button on the left top corner which will allow you to customize.\n
    How to listen to your recordings:\n
    After you finish your recording and save it, you can go back and play it again by going to the main menu and selecting "MY RECORDINGS", there you can select which recording to play.\n
    How to share your recording:\n
    When you are done recording and press on the "SAVE" button, after you place a name you can either put it in private or share it with the whole community.\n
    </string>
</resources>
